--- a/myApp/src/App.css
+++ b/myApp/src/App.css
@@ -7,6 +7,7 @@
 
 .main-content {
   padding: 50px 0 60px;
+  margin-top: 600px;
   min-height: 100vh;
   box-sizing: border-box;
   overflow-y: auto;
@@ -137,6 +138,7 @@ input[type="number"] {
 }
 
 .ads {
+  border: 100px;
   width: 100%;
   height: 100px;
 }
