--- a/myApp/src/components/Register.css
+++ b/myApp/src/components/Register.css
@@ -1,19 +1,20 @@
-.login-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background-color: #63839d;
-    padding: 20px;
+  body{
+    margin: 0;
+    padding: 0;
+    width: 340px;
+    height: 100vh;
   }
-  
+
   .login-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background: white;
-    padding: 2rem;
-    border-radius: 15px;
-    box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-    width: 100%;
-    max-width: 400px;
+    padding-top: 20px;
+    margin-top: 20px;
+    width: 412px;
+    height: 915px;
     animation: slideUp 0.5s ease;
   }
   
@@ -23,7 +24,7 @@
   }
   
   .login-logo {
-    width: 80px;
+    width: 70px;
     margin-bottom: 1rem;
   }
   
@@ -64,7 +65,7 @@
   }
   
   .login-button {
-    width: 100%;
+    width: 80%;
     padding: 12px;
     background-color: #391f51;
     color: white;
