--- a/myApp/src/App.css
+++ b/myApp/src/App.css
@@ -1,13 +1,17 @@
 .app-container {
+  position: absolute;
   text-align: center;
   max-width: 800px;
-  margin: 0 auto;
+  margin: 0;
   padding: 20px;
+  background-color: #fff;
+  left: 0;
+  top: 50px;
 }
 
 .main-content {
   padding: 50px 0 60px;
-  min-height: 100vh;
+  min-height: 50vh;
   box-sizing: border-box;
   overflow-y: auto;
   width: 100%;
@@ -201,6 +205,7 @@ input[type="number"] {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  margin-bottom: 50px;
 }
 
 .button:hover {
