--- a/myApp/src/Footer.css
+++ b/myApp/src/Footer.css
@@ -7,7 +7,7 @@
     right: 0;
     z-index: 1000;
     height: 40px;
-    width: 100%;
+    width: auto;
     box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
   }
   .bottom-nav {
@@ -15,6 +15,7 @@
     bottom: 0;
     left: 0;
     right: 0;
+    width: auto;
     background-color: #ffffff;
     padding: 15px 20px;
     display: flex;
