--- a/myApp/src/App.css
+++ b/myApp/src/App.css
@@ -17,16 +17,7 @@
   width: 100%;
 }
 
-.app-header {
-  margin-bottom: 2rem;
-}
-
-.app-title {
-  font-size: 2.5rem;
-  color: #2c3e50;
-}
-
-.greeting {
+.user-greeting {
   color: #34495e;
   margin-bottom: 1.5rem;
 }
