--- a/myApp/src/PaymentDetails.css
+++ b/myApp/src/PaymentDetails.css
@@ -5,42 +5,67 @@ body {
     background-color: #f4f4f4;
   }
   
-  .app {
-    padding: 20px;
-    max-width: 800px;
-    margin: 0 auto;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  .payment {
+    display: flex;
+    align-items: center;
+    width: 412px;
+    flex-direction: column;
+    height: 915px;
+    margin-top: 50px;
+    padding-top: 50px;
   }
-  
+
   .header {
-    text-align: center;
-    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid black;
   }
-  
-  .header h1 {
-    font-size: 24px;
-    margin: 10px 0;
-    color: #333;
+
+  .head-element {
+    margin-right: 150px;
+    margin-left: 30px;
   }
-  
+
   .payment-options {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
   }
-  
+
   .option {
-    background-color: #f9f9f9;
-    padding: 15px;
-    border-radius: 5px;
-    border: 1px solid #ddd;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 4px rgba(00, 00, 00, 0.1);
   }
-  
-  .option p {
-    margin: 0;
-    font-size: 16px;
-    color: #666;
+
+  img {
+    width: 30px;
+    height: 20px;
+  }
+
+  p{
+    margin: 0 120px 0 20px;
+  }
+
+  .done {
+    height: 30px;
+    width: 100px;
+    margin: 50px;
+    display: flex;
+    border: 1px solid black;
+    border-radius: 8px;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: rgb(43, 203, 107);
+    cursor: pointer;
+  }
+
+  .done :hover {
+    background-color: rgb(14, 91, 45);
+    box-shadow: 0px 4px rgba(00, 00, 00, 0.1);
   }
