Removed some bugs

--- a/myApp/src/components/WelcomePage.css
+++ b/myApp/src/components/WelcomePage.css
@@ -16,10 +16,10 @@ body {
 }
 
 .logo {
-    width: 200px;
+    width: 220px;
+    height: auto;
     margin: 10px;
     padding: 10px;
-
 }
 
 .nepali {
