--- a/myApp/src/components/GetStartedPage.css
+++ b/myApp/src/components/GetStartedPage.css
@@ -22,7 +22,7 @@
 
 .btn {
     padding: 12px 30px;
-  background-color: #1daf4e;
+  background-color: #659fc3;
   color: white;
   border: none;
   border-radius: 8px;
@@ -31,6 +31,6 @@
 
 .btn:hover{
     transform: translateY(-2px);
-    background-color: #16843b;
+    background-color: #44719e;
     box-shadow: 0 2px 8px rgba(0,0,0,0.1);
 }
