--- a/myApp/src/components/WelcomePage.css
+++ b/myApp/src/components/WelcomePage.css
@@ -45,6 +45,6 @@ body {
 
 .welcome-btn :hover{
     transform: translateY(-2px);
-    background-color: #193968;
+    background-color: #295fb1;
     box-shadow: 0 2px 8px rgba(0,0,0,0.1);
 }
