--- a/myApp/src/PaymentDetails.css
+++ b/myApp/src/PaymentDetails.css
@@ -7,11 +7,11 @@ body {
   
   .payment {
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     width: 412px;
-    flex-direction: column;
-    height: 915px;
-    margin-top: 50px;
+    /* flex-direction: column; */
+    /* height: 915px;
+    margin-top: 50px; */
     padding-top: 50px;
   }
 
@@ -19,7 +19,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border: 1px solid black;
+    /* border: 1px solid black; */
   }
 
   .head-element {
@@ -30,7 +30,7 @@ body {
   .payment-options {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 30px;
   }
 
   .option {
@@ -52,16 +52,16 @@ body {
   }
 
   .done {
-    height: 30px;
-    width: 100px;
-    margin: 50px;
+    height: 50px;
+    width: 150px;
+    margin: 60px;
     display: flex;
-    border: 1px solid black;
+    border: 2px solid black;
     border-radius: 8px;
     justify-content: center;
     align-items: center;
     color: white;
-    background-color: rgb(43, 203, 107);
+    background-color: rgba(7, 15, 164, 0.573);
     cursor: pointer;
   }
 
