Fixed some bugs

--- a/myApp/src/App.css
+++ b/myApp/src/App.css
@@ -1,6 +1,6 @@
 .app-container {
-  width: 100vw; /* Full browser width */
-  max-width: none;
+  width: 100%;
+  max-width: 412px;
   text-align: center;
   margin: 0;
   padding: 20px;
@@ -13,7 +13,7 @@
   min-height: 50vh;
   box-sizing: border-box;
   overflow-y: auto;
-  width: 100vw;
+  width: 100%;
   max-width: none;
 }
 
